# eval-selection-9

./: .gitignore  README.md  pyproject.toml
mlruns/0/: meta.yaml
mlruns/0/14236496257c456ab727e6854c5c69aa/: meta.yaml
mlruns/0/418624f50adf4857837e3dd5e7d12f14/: meta.yaml
mlruns/0/4f412d89f8b14d518bd9f6e713f9cb75/: meta.yaml
mlruns/0/4f412d89f8b14d518bd9f6e713f9cb75/metrics/: test_f1_micro  test_log_loss  val_f1_macro_cv_mean  val_f1_micro_cv_mean  val_f1_weighted_cv_mean  val_log_loss_cv_mean  val_roc_auc_ovo_cv_mean  val_roc_auc_ovr_cv_mean
mlruns/0/5d08d1ca7a474602989c000055b82de0/: meta.yaml
mlruns/0/5d08d1ca7a474602989c000055b82de0/metrics/: val_log_loss_cv_mean
mlruns/0/85dd1325538b47589ab4996609fc7c69/: meta.yaml
mlruns/0/944909a3e77e44a4a8e9b12107d4a6e9/: meta.yaml
mlruns/0/acb69d616c444dc1bc63566e2774b073/: meta.yaml
mlruns/0/acb69d616c444dc1bc63566e2774b073/tags/: mlflow.source.git.commit  mlflow.source.name
src/forest_ml/: cli.py
src/forest_ml/data_prep/: create_folders.py  train_val.py
src/forest_ml/model/: knn_models.py  lr_model.py  train.py
src/forest_ml/visualization/: profiling.py
