[tool.poetry]
name = "forest_ml"
version = "0.1.0"
description = "module 9 for ML-intro RSschool"
authors = ["A.Protasevich <a.protasevich93@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.22.3"
notebook = "^6.4.11"
pandas = "1.3.5"
scipy = "^1.8.0"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
scikit-learn = "^1.0.2"
pandas-profiling = "^3.1.0"
click = "^8.1.3"
mlflow = "^1.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
